--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %}Register{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -8,14 +7,14 @@
     <h1 class="mt-4">Register</h1>
     <form method="post">
         <div class="form-group mt-4">
-            <label for="username">Username</label>
+            <label for="username">Username:</label>
             <input name="username" id="username" required>
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Password:</label>
             <input type="password" name="password" id="password" required>
         </div>
-        <input  type="submit" value="Register">
+        <input type="submit" class="btn btn-primary" value="Register">
     </form>
 </div>
     </div>
