--- a/flaskr/templates/home/search.html
+++ b/flaskr/templates/home/search.html
@@ -15,7 +15,7 @@
                     <option value="{{ res[0] }}">{{ res[1] }}</option>
                     {% endfor %}
                 </select>
-                <input class="btn btn-primary" type="submit" name="btn" value="Add">
+                <input class="btn btn-primary" type="submit" name="btn" value="Select">
             </form>
         </div>
     </div>
