added the display of macro nutrients for ingredient searched

--- a/flaskr/templates/home/index.html
+++ b/flaskr/templates/home/index.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="mx-auto" align="center">
             <h3 class="mt-4">Ingredient Search</h3>
-            <form action="{{ url_for('home.search') }}" method="post">
+            <form  method="post">
                 <div class="form-group mt-4">
                     <input type="text" name="ingredient" id="ingredient"  required >
                 </div>
