--- a/flaskr/templates/home/serving.html
+++ b/flaskr/templates/home/serving.html
@@ -12,7 +12,7 @@
 
     <div class="row">
         <div class="col-4">
-            <form action="{{ url_for('home.index') }}" method="post">
+            <form method="post">
                 <select name="ing_measure" id="ing_measure" size="5" >
                     {% for res in serving_results %}
                     <option value="{{ res[2] }}">{{ res[2] }}</option>
