ingredients are able to be added together into a list

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,7 +6,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Meal Prepper</a>
+  <a class="navbar-brand" href="#">NutriPrep</a>
 
   <div >
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
