--- a/flaskr/templates/home/serving.html
+++ b/flaskr/templates/home/serving.html
@@ -3,7 +3,7 @@
 {% block content%}
 
 <h1>Serving Size</h1>
-<h3>{{ ing_title }}</h3>
+<h3>{{ food_name }}</h3>
 
 <div class="container">
     <div class="row">
