--- a/flaskr/templates/home/index.html
+++ b/flaskr/templates/home/index.html
@@ -16,7 +16,10 @@
 
         <div class="row">
             <div class="mt-30">
+                {% if food %}
                 <h3>Meal Selection</h3>
+                <p>{{ food.name }}</p>
+                {% endif %}
             </div>
 
         </div>
