--- a/flaskr/templates/home/search.html
+++ b/flaskr/templates/home/search.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-    <a href="{{ url_for('home.index') }}">Back to ingredient Search</a>
+    <a href="{{ url_for('home.meal_prep') }}">Back to ingredient Search</a>
     </div>
 
     <div class="row">
