--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,9 +1,49 @@
-
-
-ul, li {
+ul li {
     list-style:none;
     padding:0;
     margin:0;
+    display: flex;
+}
+
+.meal_custom li {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block;
+  position: relative;
+
+}
+
+.meal_custom li:hover {
+  background-color: #eee;
+}
+
+.list_buttons {
+    display: flex;
+    height: 20px;
+    width: 20px;
+    border-radius: 15px;
+    margin-left: 5px;
+}
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 14px 16px;
+  transform: translate(0%, -50%);
+}
+.close:hover {background: #bbb;}
+
+.row_mt {
+    margin-top: 70px;
+}
+.save_meal_ml {
+    margin-left: 40px;
 }
 .listWrapper {
     max-height:300px;
