--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,12 +4,23 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 
 
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">NutriPrep</a>
 
-  <div >
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+  <div class="container justify-content-end">
+
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+          <li class="nav-item active">
+                <a class="nav-link" href="#">Meals</a>
+            </li>
+        </ul>
+
+
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 
       {% if session['user_id'] %}
       <li class="nav-item active">
@@ -23,8 +34,8 @@
       <li class="nav-item active"><a class="nav-link" href="{{ url_for('auth.register') }}">Register</a></li>
       <li class="nav-item active"><a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a></li>
     {% endif %}
-
     </ul>
+    </div>
   </div>
 </nav>
 
