--- a/flaskr/templates/home/meal_prep.html
+++ b/flaskr/templates/home/meal_prep.html
@@ -3,26 +3,49 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
+    <div class="row row_mt">
         <div class="col-6">
-            <ul>
+            <ul class="meal_custom">
                 {% for food in meal %}
-                    <li>{{ food.name }}</li>
+                    <li>{{ food.name }}<span class="close">x</span></li>
                 {% endfor %}
             </ul>
+            <form>
+                <input class="btn btn-primary save_meal_ml" type="submit" name="add_meal" value="Save Meal"/>
+            </form>
         </div>
+
         <div class="col-6">
-            <h3>Macro Breakdown</h3>
-            <ul>
-                <li><b>Calories:</b> {{ macro_stats['calories_total'] }} kCal</li>
-                <li><b>Carbs:</b> {{ macro_stats['carbs_total'] }} g</li>
-                <li><b>Proteins:</b> {{ macro_stats['proteins_total'] }} g</li>
-                <li><b>Fats:</b> {{ macro_stats['fats_total'] }} g</li>
-                <li><b>Saturatd Fats:</b> {{ macro_stats['sat_fats_total'] }} g</li>
-                <li><b>Fiber:</b> {{ macro_stats['fiber_total'] }} g</li>
-            </ul>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <h3>Macro Breakdown</h3>
+                        <ul>
+                            <li><b>Calories: </b> {{ macro_stats['calories_total'] }} kCal</li>
+                            <li><b>Carbs: </b> {{ macro_stats['carbs_total'] }} g</li>
+                            <li><b>Proteins: </b> {{ macro_stats['proteins_total'] }} g</li>
+                            <li><b>Fats: </b> {{ macro_stats['fats_total'] }} g</li>
+                            <li><b>Saturatd Fats: </b> {{ macro_stats['sat_fats_total'] }} g</li>
+                            <li><b>Fiber: </b> {{ macro_stats['fiber_total'] }} g</li>
+                        </ul>
+                    </div>
+                    <div class="carousel-item">
+                        <h3>Vitamins and Minerals</h3>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </div>
+
 </div>
 
 {% endblock %}
+
