--- a/flaskr/templates/home/meal_prep.html
+++ b/flaskr/templates/home/meal_prep.html
@@ -7,7 +7,11 @@
         <div class="col-6">
             <ul class="meal_custom">
                 {% for food in meal %}
-                    <li>{{ food.name }}<a class="close" href="{{ url_for('home.delete_item') }}">x</a></li>
+                    <li>{{ food.name }}
+                        <form action="{{ url_for('home.delete_item', food_id=food['id']) }}">
+                            <input type="submit" class="close" value="x"/>
+                        </form>
+                    </li>
                 {% endfor %}
             </ul>
             <form>
@@ -20,7 +24,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <h3>Macro Breakdown</h3>
-                        <ul>
+                        <ul class="macro_list">
                             <li><b>Calories: </b> {{ macro_stats['calories_total'] }} kCal</li>
                             <li><b>Carbs: </b> {{ macro_stats['carbs_total'] }} g</li>
                             <li><b>Proteins: </b> {{ macro_stats['proteins_total'] }} g</li>
