--- a/flaskr/templates/home/meal_prep.html
+++ b/flaskr/templates/home/meal_prep.html
@@ -8,8 +8,8 @@
             <ul class="meal_custom">
                 {% for food in meal %}
                     <li>{{ food.name }}
-                        <form action="{{ url_for('home.delete_item', food_id=food['id']) }}">
-                            <input type="submit" class="remove_item" value="x"/>
+                        <form action="{{ url_for('home.delete_group_1', food_id=food['id']) }}" method="post">
+                            <input type="submit" class="remove_item" name="delete_btn_1" value="x"/>
                         </form>
                     </li>
                 {% endfor %}
@@ -45,8 +45,8 @@
             <ul class="meal_custom">
                 {% for food in meal_2 %}
                 <li>{{ food.name }}
-                    <form action="{{ url_for('home.delete_item', food_id=food['id']) }}">
-                            <input type="submit" class="remove_item" value="x"/>
+                    <form action="{{ url_for('home.delete_group_2', food_id=food['id']) }}" method="post">
+                            <input type="submit" class="remove_item" name="delete_btn_2" value="x"/>
                     </form>
                 </li>
                 {% endfor %}
