--- a/flaskr/templates/home/serving.html
+++ b/flaskr/templates/home/serving.html
@@ -7,7 +7,7 @@
 
 <div class="container">
     <div class="row">
-        <a href="{{ url_for('home.meal_prep') }}">Back to ingredient Search</a>
+        <a href="{{ url_for('home.food_compare') }}">Back to ingredient Search</a>
     </div>
 
     <div class="row">
