Added home index page and in the process of adding food query feature

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="#">Dashboard</a>
             </li>
           <li class="nav-item active">
-                <a class="nav-link" href="#">Food Query</a>
+                <a class="nav-link" href="{{ url_for('home.food_query') }}">Food Query</a>
             </li>
           <li class="nav-item active">
                 <a class="nav-link" href="{{ url_for('home.food_compare') }}">Nutri Compare</a>
