--- a/flaskr/templates/home/index.html
+++ b/flaskr/templates/home/index.html
@@ -1,31 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="mx-auto" align="center">
-            <h3 class="mt-4">Ingredient Search</h3>
-            <form  method="post">
-                <div class="form-group mt-4">
-                    <input type="text" name="ingredient" id="ingredient"  required >
-                </div>
-                <button type="submit" class="btn btn-primary" name="btn" value="Search">Search</button>
-            </form>
-        </div>
-        </div>
 
-        <div class="row">
-            <div class="mt-30">
-                {% if food %}
-                <h3>Meal Selection</h3>
-                <p>{{ food.name }}</p>
-                {% endif %}
-            </div>
+<h1>Welcome</h1>
 
-        </div>
-
-    </div>
 
 
 {% endblock %}
-
