Added food query feature and refactored endpoints of most routes to create a more streamlined approach when using both features

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -29,6 +29,13 @@ ul li {
     border-radius: 15px;
     margin-left: 5px;
 }
+
+.unstyled-button {
+  border: none;
+  padding: 0;
+  background: none;
+}
+
 .remove_item {
   cursor: pointer;
   position: absolute;
