--- a/flaskr/templates/home/food_compare.html
+++ b/flaskr/templates/home/food_compare.html
@@ -9,7 +9,7 @@
                 {% for food in meal %}
                     <li>{{ food.name }}
                         <form action="{{ url_for('home.delete_group_1', food_id=food['id']) }}" method="post">
-                            <input type="submit" class="remove_item" name="delete_btn_1" value="x"/>
+                            <input type="submit" class="remove_item unstyled-button" name="delete_btn_1" value="x"/>
                         </form>
                     </li>
                 {% endfor %}
@@ -46,7 +46,7 @@
                 {% for food in meal_2 %}
                 <li>{{ food.name }}
                     <form action="{{ url_for('home.delete_group_2', food_id=food['id']) }}" method="post">
-                            <input type="submit" class="remove_item" name="delete_btn_2" value="x"/>
+                            <input type="submit" class="remove_item unstyled-button" name="delete_btn_2" value="x"/>
                     </form>
                 </li>
                 {% endfor %}
