--- a/flaskr/templates/home/search.html
+++ b/flaskr/templates/home/search.html
@@ -4,7 +4,11 @@
 
 <div class="container">
     <div class="row">
-    <a href="{{ url_for('home.food_compare') }}">Back to ingredient Search</a>
+        {% if 'sch_q' in request.path %}
+            <a href="{{ url_for('home.food_query') }}">Back to ingredient Search</a>
+        {% else %}
+            <a href="{{ url_for('home.food_compare') }}">Back to group nutrient analysis</a>
+        {% endif %}
     </div>
 
     <div class="row">
