--- a/flaskr/templates/home/serving.html
+++ b/flaskr/templates/home/serving.html
@@ -7,7 +7,11 @@
 
 <div class="container">
     <div class="row">
-        <a href="{{ url_for('home.food_compare') }}">Back to ingredient Search</a>
+        {% if 'ser_q' in request.path %}
+            <a href="{{ url_for('home.food_query') }}">Back to ingredient Search</a>
+        {% else %}
+            <a href="{{ url_for('home.food_compare') }}">Back to group nutrient analysis</a>
+        {% endif %}
     </div>
 
     <div class="row">
