Added checkboxes in servings page for the different kinds of nutrients

--- a/flaskr/templates/home/search.html
+++ b/flaskr/templates/home/search.html
@@ -7,7 +7,7 @@
         {% if 'sch_q' in request.path %}
             <a href="{{ url_for('home.food_query') }}">Back to ingredient Search</a>
         {% else %}
-            <a href="{{ url_for('home.food_compare') }}">Back to group nutrient analysis</a>
+            <a href="{{ url_for('home.food_compare') }}">Back to group analysis</a>
         {% endif %}
     </div>
 
