--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,3 +1,5 @@
+
+
 ul li {
     list-style:none;
     padding:0;
@@ -70,4 +72,8 @@ ul li {
   margin-right: auto;
   justify-content: center;
   align-items: center;
+}
+
+form {
+    display: block;
 }
