--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,4 +1,4 @@
-<title>Meal Prep</title>
+<title>NutriFoods</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
