Mapped checkbox response with appropriate query functions in nutrient route

--- a/flaskr/templates/home/serving.html
+++ b/flaskr/templates/home/serving.html
@@ -27,6 +27,8 @@
                 {% if 'ser_q' in request.path %}
                 <fieldset>
                     <legend>Types of nutrients</legend>
+                    <input class="check" type="checkbox" id="macros" name="macros" value="macros">
+                    <label for="macros">Macros</label><br>
 
                     <input class="check" type="checkbox" id="vitamins" name="vitamins" value="vitamins">
                     <label for="vitamins">Vitamins</label><br>
