--- a/flaskr/templates/home/nutrients.html
+++ b/flaskr/templates/home/nutrients.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
-<script src="handleCheck.js">
-    import { handleCheck } from "handleCheck.js"
-</script>
+
 
 <div class="container">
     <div class="row">
@@ -75,22 +74,22 @@
                 {% if 'nut_q' in request.path %}
                 <fieldset>
                     <legend>Types of nutrients</legend>
-                    <input class="check" type="checkbox" id="macrosCheck" onclick="handleClick()" checked>
+                    <input class="check" type="checkbox" id="macrosCheck" onclick="handleCheck()" checked>
                     <label for="macros">Macros</label><br>
 
-                    <input class="check" type="checkbox" id="vitaminsCheck" onclick="handleClick()">
+                    <input class="check" type="checkbox" id="vitaminsCheck" onclick="handleCheck()">
                     <label for="vitamins">Vitamins</label><br>
 
-                    <input class="check" type="checkbox" id="mineralsCheck" onclick="handleClick()">
+                    <input class="check" type="checkbox" id="mineralsCheck" onclick="handleCheck()">
                     <label for="mineralsCheck">Minerals</label><br>
 
-                    <input class="check" type="checkbox" id="aminosCheck" onclick="handleClick()">
+                    <input class="check" type="checkbox" id="aminosCheck" onclick="handleCheck()">
                     <label for="aminosCheck">Amino_acids</label><br>
 
-                   <input class="check" type="checkbox" id="steroidsCheck" onclick="handleClick()">
+                   <input class="check" type="checkbox" id="steroidsCheck" onclick="handleCheck()">
                     <label for="steroidsCheck">Steroids</label><br>
 
-                    <input class="check" type="checkbox" id="miscCheck" onclick="handleClick()">
+                    <input class="check" type="checkbox" id="miscCheck" onclick="handleCheck()">
                 <label for="miscCheck">Misc</label>
                 </fieldset>
                 {% endif %}
