Created amino_acids, surgars, steroids and misc class variables in Food class

--- a/flaskr/templates/home/nutrients.html
+++ b/flaskr/templates/home/nutrients.html
@@ -67,6 +67,9 @@
                     <li><b>Selenium:</b></li>
                     <li><b>Zinc:</b></li>
                 </ul>
+                <ul id="amino-acids">
+                    <li><b></b></li>
+                </ul>
             </div>
         </div>
         <div class="col-6">
