Added tags for aminos, surgars, steroids and misc breakdowns in nutrients view

--- a/flaskr/templates/home/nutrients.html
+++ b/flaskr/templates/home/nutrients.html
@@ -67,8 +67,61 @@
                     <li><b>Selenium:</b></li>
                     <li><b>Zinc:</b></li>
                 </ul>
-                <ul id="amino-acids">
-                    <li><b></b></li>
+                <ul id="aminos" style="display:none">
+                    <li><b>Valine:</b></li>
+                    <li><b>Tyrosine:</b></li>
+                    <li><b>Tryptophan:</b></li>
+                    <li><b>Threonine: </b></li>
+                    <li><b>Theobromine:</b></li>
+                    <li><b>Proline:</b></li>
+                    <li><b>Serine:</b></li>
+                    <li><b>Phenylalamine:</b></li>
+                    <li><b>Alanine:</b></li>
+                    <li><b>Aspartic_acid:</b></li>
+                    <li><b>Aspartame:</b></li>
+                    <li><b>Leucine:</b></li>
+                    <li><b>Lysine:</b></li>
+                    <li><b>Isoleucine:</b></li>
+                    <li><b>Hydroxyproline:</b></li>
+                    <li><b>Histidine:</b></li>
+                    <li><b>Glycine:</b></li>
+                    <li><b>Glutamic acid:</b></li>
+                    <li><b>Methionine:</b></li>
+                    <li><b>Cystine:</b></li>
+                    <li><b>Arginine:</b></li>
+                </ul>
+                <ul id="surgars" style="display:none">
+                    <li><b>Surgars Total:</b></li>
+                    <li><b>Lactose:</b></li>
+                    <li><b>Glucose:</b></li>
+                    <li><b>Galactose:</b></li>
+                    <li><b>Sucrose:</b></li>
+                    <li><b>Fructose:</b></li>
+                    <li><b>Maltose:</b></li>
+                    <li><b>Mannitol</b></li>
+                    <li><b>Monosaccharides Total:</b></li>
+                    <li><b>Disaccharides Total:</b></li>
+                    <li><b>Sorbitol</b></li>
+                </ul>
+                <ul id="steroids" style="display:none">
+                    <li><b>Campesterol:</b></li>
+                    <li><b>Stigmasterol:</b></li>
+                    <li><b>Beta-sitosterol:</b></li>
+                    <li><b>Total Plant Sterol:</b></li>
+                    <li><b>Cholesterol:</b></li>
+                </ul>
+                <ul id="misc" style="display:none">
+                    <li><b>Caffeine</b></li>
+                    <li><b>Phosphorus:</b></li>
+                    <li><b>Oxalic acid</b></li>
+                    <li><b>Moisture:</b></li>
+                    <li><b>Lycopene:</b></li>
+                    <li><b>Luteine and Zeaxanthine:</b></li>
+                    <li><b>Choline Total:</b></li>
+                    <li><b>Betaine:</b></li>
+                    <li><b>Beta-cryptoxanthin:</b></li>
+                    <li><b>Ash Total:</b></li>
+                    <li><b>Alcohol:</b></li>
                 </ul>
             </div>
         </div>
@@ -87,6 +140,9 @@
 
                     <input class="check" type="checkbox" id="aminosCheck" onclick="handleCheck()">
                     <label for="aminosCheck">Amino_acids</label><br>
+
+                    <input class="check" type="checkbox" id="surgarsCheck" onclick="handleCheck()">
+                    <label for="surgarsCheck">Surgars</label><br>
 
                    <input class="check" type="checkbox" id="steroidsCheck" onclick="handleCheck()">
                     <label for="steroidsCheck">Steroids</label><br>
